RESOLVED FIXED 230284
Addition of CSSTransformValue, CSSTransformComponent & subclasses
https://bugs.webkit.org/show_bug.cgi?id=230284
Summary Addition of CSSTransformValue, CSSTransformComponent & subclasses
Qiaosong Zhou
Reported 2021-09-14 16:38:40 PDT
Addition of CSSTransformValue, CSSTransformComponent & subclasses
Attachments
Patch (101.13 KB, patch)
2021-09-14 16:40 PDT, Qiaosong Zhou
no flags
Patch (179.80 KB, patch)
2021-09-14 18:18 PDT, Qiaosong Zhou
no flags
Patch (179.91 KB, patch)
2021-09-15 01:43 PDT, Qiaosong Zhou
no flags
Patch (179.97 KB, patch)
2021-09-15 12:16 PDT, Qiaosong Zhou
no flags
Patch (200.43 KB, patch)
2021-09-16 17:57 PDT, Qiaosong Zhou
ews-feeder: commit-queue-
Patch (203.76 KB, patch)
2021-09-16 18:14 PDT, Qiaosong Zhou
no flags
Patch (203.83 KB, patch)
2021-09-17 14:07 PDT, Qiaosong Zhou
no flags
Patch (206.16 KB, patch)
2021-09-17 15:57 PDT, Alex Christensen
no flags
Qiaosong Zhou
Comment 1 2021-09-14 16:40:23 PDT
Alex Christensen
Comment 2 2021-09-14 16:46:39 PDT
Comment on attachment 438189 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438189&action=review probably needs some test expectations to be updated. > Source/WebCore/css/typedom/transform/CSSMatrixComponent.cpp:58 > + return ""_s; FIXME: Implement. > Source/WebCore/css/typedom/transform/CSSMatrixComponent.cpp:63 > + return DOMMatrix::fromMatrix(DOMMatrixInit { }); ditto > Source/WebCore/css/typedom/transform/CSSSkew.h:54 > + Ref<CSSNumericValue> m_ax, m_ay; We usually put variable declarations on their own line with the type repeated in WebKit. > Source/WebCore/css/typedom/transform/CSSTranslate.h:56 > + Ref<CSSNumericValue> m_x, m_y; ditto
Qiaosong Zhou
Comment 3 2021-09-14 18:18:20 PDT
Alex Christensen
Comment 4 2021-09-14 19:26:43 PDT
Comment on attachment 438198 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438198&action=review > Source/WebCore/css/typedom/transform/CSSTransformComponent.h:38 > + WTF_MAKE_ISO_ALLOCATED(CSSTransformComponent); Looks like you need to #include <wtf/IsoMalloc.h>
Qiaosong Zhou
Comment 5 2021-09-15 01:43:52 PDT
Qiaosong Zhou
Comment 6 2021-09-15 12:16:36 PDT
Qiaosong Zhou
Comment 7 2021-09-15 14:47:18 PDT
WPT test crashes are due to the lack of CustomToJSObject wrapper. Fixing.
Qiaosong Zhou
Comment 8 2021-09-16 17:57:39 PDT
Qiaosong Zhou
Comment 9 2021-09-16 18:14:13 PDT
Alex Christensen
Comment 10 2021-09-17 13:02:45 PDT
Comment on attachment 438424 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438424&action=review > Source/WebCore/bindings/js/JSCSSTransformComponentCustom.cpp:2 > + * Copyright (C) 2018 Apple Inc. All rights reserved. 2021 > Source/WebCore/bindings/js/JSCSSTransformComponentCustom.cpp:46 > + if (is<CSSMatrixComponent>(value.get())) Can this be a switch statement instead? > Source/WebCore/css/typedom/transform/CSSTransformComponent.h:61 > + nit: extra space
Qiaosong Zhou
Comment 11 2021-09-17 14:07:53 PDT
Alex Christensen
Comment 12 2021-09-17 15:50:22 PDT
Comment on attachment 438515 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438515&action=review > Source/WebCore/css/typedom/transform/CSSMatrixComponent.cpp:33 > + nit: extra space > Source/WebCore/css/typedom/transform/CSSTransformComponent.h:61 > + nit: extra space. > Source/WebCore/css/typedom/transform/CSSTransformComponent.h:63 > + bool m_is2D; This is uninitialized memory. I'll add { false } while landing. > Source/WebCore/css/typedom/transform/CSSTransformValue.h:56 > + bool m_is2D; ditto
Alex Christensen
Comment 13 2021-09-17 15:55:22 PDT
Comment on attachment 438515 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438515&action=review > Source/WebCore/css/typedom/transform/CSSMatrixComponentOptions.h:33 > + bool is2D; Here too.
Alex Christensen
Comment 14 2021-09-17 15:57:04 PDT
Alex Christensen
Comment 15 2021-09-17 16:02:34 PDT
Radar WebKit Bug Importer
Comment 16 2021-09-17 16:03:17 PDT
Note You need to log in before you can comment on or make changes to this bug.